Hotfix: flash messages and banner

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,10 +27,11 @@
 
 
 <body>
-{% block topmenu %}
-    {% include 'main/navbar.html.twig' %}
-{% endblock %}
+{% include 'main/navbar.html.twig' %}
 
+{% block banner %}
+    <span style=""/>
+{% endblock %}
 
 <div id="App">
     {% include 'flash_message.html.twig' %}
