--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,7 +111,6 @@ body{
 
 /*Text from the top main page - header*/
 #elevator_pitch {
-    margin-top: 10px;
     padding: 90px 20px 20px ;
     animation: fadein 3s;
     background-color: #336655;
@@ -474,7 +473,7 @@ table caption {
 @media screen and (min-width:800px) {
 
     #elevator_pitch  {
-        margin: 1rem 1rem 7rem 1rem;
+        margin: 1rem 0 0;
         animation: fadein 3s;
     }
     #elevator_pitch h1{
@@ -616,9 +615,6 @@ table caption {
 
     }
 
-    .col {
-        margin-top: 6rem;
-    }
     .about_info{
         text-align: center;
         display: flex;
