Hotfix: nav overlapping page content

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
 {% include 'main/navbar.html.twig' %}
 
 {% block banner %}
-    <span style=""/>
+    <div style="height: 20px"></div>
 {% endblock %}
 
 <div id="App">
