--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -129,7 +129,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src= {{ asset('Js/404.js') }}></script>
+    <script src= {{ asset('js/404.js') }}></script>
 
     {% block footer "" %}
 {% endblock %}
