--- a/templates/main/navbar.html.twig
+++ b/templates/main/navbar.html.twig
@@ -1,15 +1,20 @@
 <!--Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-between">
+    <a class="navbar-brand" href="#">LetzSwap</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control-sm mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn-sm btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
+            <li class="nav-item {% if app.request.attributes.get('_route') == 'about' %} active {% endif %}">
+                <a class="nav-link" href="{{ path('about') }}">
+                    {{ 'NAV.ABOUT'|trans }}
+                </a>
+            </li>
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                  {% if is_granted('ROLE_ADMIN') %}
                     <li class="nav-item {% if app.request.attributes.get('_route') == 'admin' %} active {% endif %}">
@@ -25,8 +30,9 @@
                         {{ 'NAV.ADD_ITEM'|trans }}
                     </a>
                 </li>
+                {#Here should go the href to user profile#}
                 <li class="nav-item">
-                    <a class="nav-link" id="username"> Logged as {{ app.user.username }}</a>
+                    <a class="nav-link" id="username"> Logged as {{ app.user.username }}  <i class="fas fa-user"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_logout') }}">
@@ -36,7 +42,7 @@
 
 
             {% else %}
-                
+
                 <li class="nav-item {% if app.request.attributes.get('_route') == 'login' %} active {% endif %}">
                     {#  <a class="nav-link" data-toggle="modal" data-target="#modalLogin">#}
                     <a class="nav-link" href="{{ path('login') }}">
@@ -52,25 +58,8 @@
 
             {% endif %}
 
+            </li>
 
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-user"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right dropdown-default"
-                     aria-labelledby="navbarDropdownMenuLink-333">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item {% if app.request.attributes.get('_route') == 'about' %} active {% endif %}">
-                <a class="nav-link" href="{{ path('about') }}">
-                    {{ 'NAV.ABOUT'|trans }}
-                </a>
-            </li>
         </ul>
     </div>
 </nav>
