Update app official name

--- a/templates/about/about.html.twig
+++ b/templates/about/about.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <article class="about_info">
-        <h2>About <span>LëtzSwap</span> </h2>
+        <h2>About <span>{{ 'APP.TITLE'|trans }}</span> </h2>
 
         <p>
             LëtzSwap! provides users a place where they can post unwanted items to swap them between themselves.
