--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -24,14 +24,18 @@
             <div class="d-flex justify-content-center flex-wrap ">
                 {% for item in items %}
                     <div class="col">
-                        <div class="card" style="width: 17rem;">
-                            {#  TODO: Remove the width of the image, use CSS - Adolfo #}
+                        <div class="card">
                             <img class="card-img-top"
                                  src="{{ path('get_picture_content', {'picture': item.getPictures()|first.getId()}) }}"
                                  alt="{{ item.title }}" width="250px">
                             <div class="card-body">
                                 <h5 class="card-title">{{ item.title }}</h5>
                                 <div id="butons">
+                                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                                        {% if (is_granted('ROLE_ADMIN')) or  ((item.getUser.getId() != app.user.id)) %}
+                                            {{ include('item/_delete-confirm.html.twig') }}
+                                        {% endif %}
+                                    {% endif %}
                                     <a href="{{ path('item_details', {'id': item.getId()}) }}"
                                        class="btn btn-info"><i class="fas fa-info"></i></a>
                                 </div>
