change of message to non activated users

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -10,7 +10,7 @@
     <main>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
             {% if uRoles|length == 0 %}
-                <div class="alert alert-danger">You are almost done! You need to activate your account to access the
+                <div class="alert alert-warning">You are almost done! You need to activate your account to access the
                     website functionalities,
                     please check your
                     e-mails.
