aligned items to right. Still needs colors

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,18 +59,40 @@ body{
     margin: 10px auto 100px;
 }
 
-/*Navbar design begin
+
 .navbar {
-    z-index: 9999;
-    top: 0;
-    width: 100%;
-    height: 50px;
-    display: flex;
-    position: fixed;
+
     background-color: #ffffff;
     box-shadow: -6px 4px 7px -5px rgba(0,0,0,0.75);
 }
+.border-letzswap {
+    border-radius: 102px 102px 102px 102px;
+    border: 0px solid lightgray;
+    background-color: lightgray;
+}
+.navbar-toggler {
+    border: none;
+}
+#search-height {
+    height: 25px;
+}
 
+.has-search .form-control {
+    padding-left: 2.375rem;
+}
+
+.has-search .form-control-feedback {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    pointer-events: none;
+    color: #aaa;
+}
+/*
 .navbar_list {
     top: 0;
     margin-bottom: 9px;
@@ -94,9 +116,6 @@ body{
 
 }
 
-.navbar{
-    height: 90px;
-}
 .navbar_link {
     color: #336655;
     text-decoration: none;
