added messages and templates

--- a/templates/mail/contact/contact-mail.html.twig
+++ b/templates/mail/contact/contact-mail.html.twig
@@ -13,7 +13,7 @@
 <p>Someone named {{ data.name }}</p>
 <p>Whose email is {{ data.email }}</p>
 <p>Sent a message with subject {{ data.subject }}</p>
-<p>With content" "{{ data.message }}"</p>
+<p>With content "{{ data.message }}"</p>
 
 
 </body>
