--- a/templates/mail/contact/contact-mail.txt.twig
+++ b/templates/mail/contact/contact-mail.txt.twig
@@ -2,4 +2,4 @@ Contact Mail from {{ data.name }}
 
 Someone named {{ data.name }}, whose email is {{ data.email }}, sent a message with subject {{ data.subject }} and the content bellow
 
-{{ data.message }}
+{{ data.message }}.
